navbar; known-terms panel; recently searched

--- a/app/linking-components/module.styl
+++ b/app/linking-components/module.styl
@@ -1,7 +1,10 @@
 @require "../../styles/colors.styl"
 
+li
+    list-style none
+
 .linkage-bin
-    height 25vh
+    height 20vh
     display flex
     flex-direction column
     justify-content space-between
@@ -20,11 +23,12 @@
     margin 10px
 
 .drag-child
+    width 100%
     margin 0
     padding 0
 
 .linked-terms-container
-    height 40vh
+    height 20vh
     overflow auto
     padding 5px
 
