--- a/app/page-layout.styl
+++ b/app/page-layout.styl
@@ -1,4 +1,15 @@
+.linking-page{
+    margin-top 30px
+}
 .page-content
     display flex
     justify-content space-between
     margin-top 20px
+
+.linked 
+    margin-top 20px
+    display flex
+    justify-content space-around
+
+.left 
+    width 70vw
