--- a/styles/colors.styl
+++ b/styles/colors.styl
@@ -1,6 +1,7 @@
 @require("~@macrostrat/ui-components/lib/esm/index.css")
 @require("~@blueprintjs/core/lib/css/blueprint.css")
 @require("~@macrostrat/ui-components/src/shared/colors.styl")
+@import "~@blueprintjs/popover2/lib/css/blueprint-popover2.css";
 
 $primary-dark = #314448
 
