--- a/app/pages.styl
+++ b/app/pages.styl
@@ -23,7 +23,7 @@ ul {
 .recent-terms-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     padding:2px;
     height: 85px;
 }
