3 col layout; more consistent margins and borders; more descriptive text in callouts

--- a/app/known-terms/module.styl
+++ b/app/known-terms/module.styl
@@ -59,4 +59,11 @@
     overflow-y: auto;
 }
 
-
+.recent-terms-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding:2px;
+    height: 85px;
+    margin-bottom: 11px;
+}
