--- a/app/linking-components/module.styl
+++ b/app/linking-components/module.styl
@@ -3,34 +3,36 @@
 li
     list-style none
 
+h2 {
+    margin: 0;
+    margin-bottom: 5px;
+}
+
 .linkage-bin
-    height 20vh
+    height 40vh
+    padding 5px
+    
+.linked-terms-container
+.linkage-bin
+    width 20vw
+    background-color white
     display flex
     flex-direction column
     justify-content space-between
 
 .linked-terms-container
-.linkage-bin
-    width 20vw
-    border-radius 20px
-    background-color white
-    margin-right 30px
+    height 30vh
+    overflow auto
+    padding 5px
+    margin-bottom 10px
 
 .link-terms
     width 100%
-
-.link-btn
-    margin 10px
 
 .drag-child
     width 100%
     margin 0
     padding 0
-
-.linked-terms-container
-    height 20vh
-    overflow auto
-    padding 5px
 
 .link-term-tag
     background-color $secondary-dark
