--- a/app/page-layout.styl
+++ b/app/page-layout.styl
@@ -1,15 +1,23 @@
 .linking-page{
-    margin-top 30px
+    margin-top 45px
 }
 .page-content
     display flex
     justify-content space-between
     margin-top 20px
 
-.linked 
-    margin-top 20px
-    display flex
-    justify-content space-around
+.linked {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between
+    padding-top:10px;
+}
 
-.left 
-    width 70vw
+.left {
+    width: 70vw;
+    display: flex;
+}
+.end{
+    padding-top: 10px;
+    margin-right 20px
+}
