--- a/app/pages.styl
+++ b/app/pages.styl
@@ -20,13 +20,6 @@ ul {
   list-style: none;
 }
 
-.recent-terms-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding:2px;
-    height: 85px;
-}
 .landing-search, .linking-page
     color $primary-dark
     display flex 
@@ -79,7 +72,7 @@ ul {
 .snippet-card
     width 93%
 .pubcard
-    width 70vw
+    width 80vw
     &:hover
         color $secondary-dark
 
@@ -139,7 +132,6 @@ ul {
 
 .known-terms
 .snippets-container {
-    padding: 10px;
     display: flex;
     flex-direction: column;
     margin-left 10px
@@ -149,8 +141,10 @@ ul {
     width 35vw
 
 .snippets-container{
-    width: 90%;
-    height 70vh
+    width: 42vw;
+    height 86vh
+    margin-bottom: 5px;
+    flex-basis: 100%;
 }
 
 .known-terms-list
